# diary-project

./: .env  .gitignore  .gitmessage.txt  README.md  manage.py  pyproject.toml
Diary_Project/: asgi.py  settings.py  urls.py  wsgi.py
diaries/: apps.py  models.py
diary/: admin.py  models.py  serializers.py  urls.py  views.py
diary/migrations/: 0001_initial.py
templates/: base.html  email_sedn.html  home.html
templates/diary/: diary_delete.html  diary_detail.html  diary_form.html  diary_list.html
templates/users/: login.html  profile.html  signup.html  user_form.html  user_list.html
users/: admin.py  email_utils.py  forms.py  models.py  serializers.py  signup_views.py  singup_urls.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_name_alter_user_nickname_and_more.py  0003_remove_user_username_alter_user_is_active.py
